--- a/Partners.html
+++ b/Partners.html
@@ -45,7 +45,7 @@
                 <div class="collapse navbar-collapse" id="mynavbar">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">HOME</a>
+                            <a class="nav-link" href="./index.html">HOME</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHO WE ARE</a>
@@ -62,7 +62,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHAT WE DO</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">We Work For</a></li>
+                                <li><a class="dropdown-item" href="./workfor.html">We Work For</a></li>
                                 <li><a class="dropdown-item" href="#">Working Area</a></li>
                                 <li><a class="dropdown-item" href="#">Our Approach</a></li>
                                 <li><a class="dropdown-item" href="#">Activities</a></li>
@@ -338,7 +338,7 @@
                         <div class="partner-subscribe ">
                             <h1>Subscribe Now</h1>
                         </div>
-                        <div class="partner-for ">
+                        <div class="partner-for">
                             <p>Don’t miss our future updates! Get Subscribed Today!</p>
                         </div>
                         <div class="login">
