--- a/governing board.html
+++ b/governing board.html
@@ -45,7 +45,7 @@
                 <div class="collapse navbar-collapse" id="mynavbar">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">HOME</a>
+                            <a class="nav-link" href="./index.html">HOME</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHO WE ARE</a>
@@ -62,7 +62,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHAT WE DO</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">We Work For</a></li>
+                                <li><a class="dropdown-item" href="./workfor.html">We Work For</a></li>
                                 <li><a class="dropdown-item" href="#">Working Area</a></li>
                                 <li><a class="dropdown-item" href="#">Our Approach</a></li>
                                 <li><a class="dropdown-item" href="#">Activities</a></li>
@@ -314,7 +314,9 @@
                 <div class="col-sm-4 mt-3">
                     <div class="governing-board-info-card">
                         <div class="governing-board-card-img">
-                            <a href="#"><img src="./assets/img/governing-board-img/Dr-Omar-Sharif-qdr7k2t7xj24rffe8577t7z7lulx09h5u3e5fnw0qg.jpg" alt=""></a>
+                            <a href="#"><img
+                                    src="./assets/img/governing-board-img/Dr-Omar-Sharif-qdr7k2t7xj24rffe8577t7z7lulx09h5u3e5fnw0qg.jpg"
+                                    alt=""></a>
                         </div>
                         <div class="governing-board-card-text mt-5">
                             <h5> <a href="#">Dr. Md. Omar Sharif Ibne Hasan</a></h2>
@@ -352,7 +354,9 @@
                 <div class="col-sm-4 mt-3">
                     <div class="governing-board-info-card">
                         <div class="governing-board-card-img">
-                            <a href="#"><img src="./assets/img/governing-board-img/hashi-qdr7k2t7xj24rffe8577t7z7lulx09h5u3e5fnw0qg.jpg" alt=""></a>
+                            <a href="#"><img
+                                    src="./assets/img/governing-board-img/hashi-qdr7k2t7xj24rffe8577t7z7lulx09h5u3e5fnw0qg.jpg"
+                                    alt=""></a>
                         </div>
                         <div class="governing-board-card-text mt-5">
                             <h5> <a href="#">Ms. Hasi Chakma</a></h2>
