--- a/mission&vision.html
+++ b/mission&vision.html
@@ -62,7 +62,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHAT WE DO</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">We Work For</a></li>
+                                <li><a class="dropdown-item" href="./workfor.html">We Work For</a></li>
                                 <li><a class="dropdown-item" href="#">Working Area</a></li>
                                 <li><a class="dropdown-item" href="#">Our Approach</a></li>
                                 <li><a class="dropdown-item" href="#">Activities</a></li>
@@ -148,43 +148,49 @@
         </nav>
     </section>
     <!-- nav-section-end -->
-<!-- mission&vision-hero-section-start -->
-<section id="mission-vision-main-hero">
-    <div class="mission-vision-hero">
-        <h1>MISSION <span style="color: red;"> & VISION</span></h1>
-    </div>
-</section>
-<!-- mission&vision-hero-section-end -->
-<!-- mission&vision-text-section-start -->
-<section id="mission-vision">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="mission">
-                    <h2>MISSION</h2>
-                    <p>Build a safer community by reducing the risk of a natural disasters and human induced hazards by developing efficient response management systems, providing humanitarian support, tackling climate change, providing healthcare to the undertaking research and innovation programs. </p>
+    <!-- mission&vision-hero-section-start -->
+    <section id="mission-vision-main-hero">
+        <div class="mission-vision-hero">
+            <h1>MISSION <span style="color: red;"> & VISION</span></h1>
+        </div>
+    </section>
+    <!-- mission&vision-hero-section-end -->
+    <!-- mission&vision-text-section-start -->
+    <section id="mission-vision">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="mission">
+                        <h2>MISSION</h2>
+                        <p>Build a safer community by reducing the risk of a natural disasters and human induced hazards
+                            by developing efficient response management systems, providing humanitarian support,
+                            tackling climate change, providing healthcare to the undertaking research and innovation
+                            programs. </p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="vission">
-                    <h2>VISION</h2>
-                    <ul>
-                        <li>In alliance with the communities and other stakeholders, develop networks to appropriately coordinate disaster risk reduction and management.</li>
-                        <li>Develop and enhance sustainable disaster risk management capacities and mechanisms.</li>
-                        <li>Raising awareness and exchange of information of disaster risk management expertise and experience.</li>
-                        <li>Skills & development training for building safer communities.</li>
-                        <li>Respond to emergency situations including humanitarian crisis.</li>
-                       <li>Tackle impacts of climate change and develop resilience among vulnerable groups
-                    </li>
-                    <li>Develop knowledge and capacity through effective research and innovation to support our broader agenda.</li>
+                <div class="col-sm-6">
+                    <div class="vission">
+                        <h2>VISION</h2>
+                        <ul>
+                            <li>In alliance with the communities and other stakeholders, develop networks to
+                                appropriately coordinate disaster risk reduction and management.</li>
+                            <li>Develop and enhance sustainable disaster risk management capacities and mechanisms.</li>
+                            <li>Raising awareness and exchange of information of disaster risk management expertise and
+                                experience.</li>
+                            <li>Skills & development training for building safer communities.</li>
+                            <li>Respond to emergency situations including humanitarian crisis.</li>
+                            <li>Tackle impacts of climate change and develop resilience among vulnerable groups
+                            </li>
+                            <li>Develop knowledge and capacity through effective research and innovation to support our
+                                broader agenda.</li>
 
-                    </ul>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<!-- mission&vision-text-section-end -->
+    </section>
+    <!-- mission&vision-text-section-end -->
 
 
 
