--- a/workfor.html
+++ b/workfor.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width= device-width,initial-scale=1.0">
-    <title>About Us</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>We Work For</title>
     <!-- css-link-start -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- css-link-end -->
@@ -148,43 +147,38 @@
         </nav>
     </section>
     <!-- nav-section-end -->
-    <!-- about-hero-section-start -->
-    <section id="about-us-hero">
-        <div class="about-hero">
-            <h1>ABOUT <span style="color: red;"> US </span></h1>
-        </div>
-    </section>
-
-    <!-- about-hero-section-end  -->
-    <!-- about-us-section-start -->
-    <section id="nav-about-us">
-        <div class="container">
-            <div class="nav-about">
-                <div class="nav-about-header">
-                    <h1>ABOUT US</h1>
-                    <p>Community Initiative Society (CIS) is a non-government, community focused, self financed,
-                        international humanitarian organization engaged with emergency response and management,
-                        humanitarian support, tackling climate change, providing healthcare to the underprivileged, and
-                        undertaking research and innovation, for making communities safer and sustainable.</p>
-                    <p>Commencing operations in 2014, we have been supporting vulnerable communities across Bangladesh
-                        with an objective to implement integrated and sustainable community-focused interventions. Our
-                        focus is to help the Government of Bangladesh achieve the development goals and the targets of
-                        the UN Sustainable Development Goals (SDGs); and supporting Bangladesh’s graduation from the
-                        Least Developed Countries (LDCs) status through inclusive development.</p>
-                    <p>Our journey has been full of changes, development and opportunities. We have strengthened our
-                        institutional capacity with enhanced governance and risk management frameworks to ensure
-                        continuation of our existing compliance with regulatory authorities into the future. We look
-                        forward to contribute to the transformation of Bangladesh on its journey to become a developed
-                        society with improved communities and skilled human resources.</p>
+    <!-- we-work-for-section-start -->
+    <section id="we-work-for">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-8">
+                    <div class="work-for">
+                        <div class="work-for-header">
+                            <h3>We Work For</h3>
+                        </div>
+                        <div class="work-for-text">
+                            <p>More than 80 % of the Bangladesh population is potentially exposed to floods, earthquakes
+                                and droughts, and more than 70 % to cyclones. On average, the country experiences severe
+                                tropical cyclone every three years, and about 25 % of the land mass is inundated with
+                                flood waters every year. Severe flooding occurs every 4-5 years and covers 60 % of the
+                                land mass.</p>
+                            <p>We focus on building resilient community by the community in disaster prone areas with
+                                right based approach taking into consideration of gender equality and inclusivity of the
+                                community. The community is the first to be affected and also the first to response in
+                                disaster. Building community resiliency is utmost crucial.</p>
+                            <p>CIS focus on developing resiliency in community by the community through collaboration
+                                with government agencies, NGO, INGO, international network and research institutes. The
+                                sharing and learning process will be most valuable to disseminate both locally and
+                                internationally through our network with international organizations.</p>
+                        </div>
+                    </div>
                 </div>
+                <div class="col-sm-3"></div>
             </div>
         </div>
     </section>
-    <!-- about-us-section-end -->
-
-
-
-
+    <!-- we-work-for-section-end -->
 
 
 
@@ -372,7 +366,6 @@
     </section>
 
     <!-- copyright-section-end -->
-
 </body>
 
 </html>
