--- a/history.html
+++ b/history.html
@@ -61,7 +61,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHAT WE DO</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">We Work For</a></li>
+                                <li><a class="dropdown-item" href="./workfor.html">We Work For</a></li>
                                 <li><a class="dropdown-item" href="#">Working Area</a></li>
                                 <li><a class="dropdown-item" href="#">Our Approach</a></li>
                                 <li><a class="dropdown-item" href="#">Activities</a></li>
@@ -152,10 +152,10 @@
     <!-- history-hero-section-start -->
     <section id="history-main-hero">
         <div class="history-hero">
-            <h1>OUR <span style="color: red;">   HISTORY </span></h1>
+            <h1>OUR <span style="color: red;"> HISTORY </span></h1>
         </div>
     </section>
-   
+
     <!-- history-hero-section-end -->
     <!-- history-us-section-start -->
     <section id="nav-our-history">
@@ -163,11 +163,20 @@
             <div class="nav-history">
                 <div class="nav-history-header">
                     <h1>OUR HISTORY</h1>
-                    <p>Community Initiative Society (CIS) was founded in 2014. Since inception, CIS has been providing support to strength social empowerment, disaster preparedness and mitigation, disaster risk reduction, healthcare, capacity development, aid activities, and developing resilience to climate change to reduce the impact of disasters upon the underprivileged communities across Bangladesh.
+                    <p>Community Initiative Society (CIS) was founded in 2014. Since inception, CIS has been providing
+                        support to strength social empowerment, disaster preparedness and mitigation, disaster risk
+                        reduction, healthcare, capacity development, aid activities, and developing resilience to
+                        climate change to reduce the impact of disasters upon the underprivileged communities across
+                        Bangladesh.
 
                     </p>
-                    <p>Our program are consistent with the provision of the Constitution of Bangladesh, as well as Perspective Plan 2011-2021: Making Vision 2021 a Reality; the National Integrity Strategy (2012); the Seventh Five Year Plan (2016-2020); and the Sustainable Development Agenda 2030. We consider ourselves a partner of the Government of Bangladesh and other stockholders working to reduce poverty, building sustainable communities for the marginalized, and engaging in multi-stockholder partnerships towards achieving the SDG goals.</p>
-            
+                    <p>Our program are consistent with the provision of the Constitution of Bangladesh, as well as
+                        Perspective Plan 2011-2021: Making Vision 2021 a Reality; the National Integrity Strategy
+                        (2012); the Seventh Five Year Plan (2016-2020); and the Sustainable Development Agenda 2030. We
+                        consider ourselves a partner of the Government of Bangladesh and other stockholders working to
+                        reduce poverty, building sustainable communities for the marginalized, and engaging in
+                        multi-stockholder partnerships towards achieving the SDG goals.</p>
+
                 </div>
             </div>
         </div>
