--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">HOME</a>
+              <a class="nav-link" href="./index.html">HOME</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHO WE ARE</a>
@@ -59,7 +59,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHAT WE DO</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">We Work For</a></li>
+                <li><a class="dropdown-item" href="./workfor.html">We Work For</a></li>
                 <li><a class="dropdown-item" href="#">Working Area</a></li>
                 <li><a class="dropdown-item" href="#">Our Approach</a></li>
                 <li><a class="dropdown-item" href="#">Activities</a></li>
@@ -475,34 +475,34 @@
     <div class="section-header-underline "></div>
     <div class="impact-main-area mt-5">
       <div class=" container">
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="impact-item">
-            <h1>10+</h1>
-            <h2>YEARS</h2>
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="impact-item">
+              <h1>10+</h1>
+              <h2>YEARS</h2>
+            </div>
           </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="impact-item">
-            <h1>150+</h1>
-            <h2>AREA</h2>
+          <div class="col-sm-3">
+            <div class="impact-item">
+              <h1>150+</h1>
+              <h2>AREA</h2>
+            </div>
           </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="impact-item">
-            <h1>100+</h1>
-            <h2>PROJECT</h2>
+          <div class="col-sm-3">
+            <div class="impact-item">
+              <h1>100+</h1>
+              <h2>PROJECT</h2>
+            </div>
           </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="impact-item">
-            <h1>1,000K+</h1>
-            <h2>PEOPLES</h2>
+          <div class="col-sm-3">
+            <div class="impact-item">
+              <h1>1,000K+</h1>
+              <h2>PEOPLES</h2>
 
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
     </div>
   </section>
