--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
               <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHAT WE DO</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="./workfor.html">We Work For</a></li>
-                <li><a class="dropdown-item" href="#">Working Area</a></li>
-                <li><a class="dropdown-item" href="#">Our Approach</a></li>
-                <li><a class="dropdown-item" href="#">Activities</a></li>
+                <li><a class="dropdown-item" href="./workingarea.html">Working Area</a></li>
+                <li><a class="dropdown-item" href="./our-approach.html">Our Approach</a></li>
+                <li><a class="dropdown-item" href="./activities.html">Activities</a></li>
               </ul>
             </li>
 
