--- a/workingarea.html
+++ b/workingarea.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width= device-width,initial-scale=1.0">
-    <title>Mission & Vision</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WORKING AREA</title>
 
     <!-- css-link-start -->
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -148,50 +148,45 @@
         </nav>
     </section>
     <!-- nav-section-end -->
-    <!-- mission&vision-hero-section-start -->
-    <section id="mission-vision-main-hero">
-        <div class="mission-vision-hero">
-            <h1>MISSION <span style="color: red;"> & VISION</span></h1>
+    <!-- working-area-hero-section-start -->
+    <section id="working-area-hero">
+        <div class="working-hero">
+            <h1>WORKING <span style="color: red;"> AREA</span></h1>
         </div>
     </section>
-    <!-- mission&vision-hero-section-end -->
-    <!-- mission&vision-text-section-start -->
-    <section id="mission-vision">
+    <!-- working-area-hero-section-end  -->
+    <!-- working-area-section-start  -->
+    <section id="nav-working-area">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="mission">
-                        <h2>MISSION</h2>
-                        <p>Build a safer community by reducing the risk of a natural disasters and human induced hazards
-                            by developing efficient response management systems, providing humanitarian support,
-                            tackling climate change, providing healthcare to the undertaking research and innovation
-                            programs. </p>
-                    </div>
+            <div class="nav-working">
+                <div class="nav-working-header">
+                    <h1>WORKING AREA</h1>
+                    <p>Community Initiative Society (CIS) has expanded its working area to 37 districts in
+                        Bangladesh,
+                        covering 60 percent of the demographic landscape including the climate vulnerable coastal
+                        communities and the underprivileged population.</p>
                 </div>
-                <div class="col-sm-6">
-                    <div class="vission">
-                        <h2>VISION</h2>
-                        <ul>
-                            <li>In alliance with the communities and other stakeholders, develop networks to
-                                appropriately coordinate disaster risk reduction and management.</li>
-                            <li>Develop and enhance sustainable disaster risk management capacities and mechanisms.</li>
-                            <li>Raising awareness and exchange of information of disaster risk management expertise and
-                                experience.</li>
-                            <li>Skills & development training for building safer communities.</li>
-                            <li>Respond to emergency situations including humanitarian crisis.</li>
-                            <li>Tackle impacts of climate change and develop resilience among vulnerable groups
-                            </li>
-                            <li>Develop knowledge and capacity through effective research and innovation to support our
-                                broader agenda.</li>
-
-                        </ul>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="nav-working-map mt-5">
+                            <img src="./assets/img/CIS-All-District-Working-Area-map-update.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="nav-working-text mt-5">
+                            <p>
+                                The districts are Dhaka including Dhaka city, Munshiganj, Pabna, Sirajganj, Rajshahi
+                                Gaibandha, Jossore, Bogra, Narayanganj, Mymensingn, Netrokona, Sunamganj, Kurigram,
+                                Satkhira, Chandpur, Barishal, Dinajpur, Madaripur (Kalkini), Chattogram, Habiganj,
+                                sylhet, Comilla, Rajshahi, Faridpur, Rangpur, Jossore, Kisorganj, Manikganj, Satkhira,
+                                Noakhali, Feni, Cox’s bazar, Jamalpur, Bagerhat, Khulna, Kustia & Patuakhali.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- mission&vision-text-section-end -->
-
+    <!-- working-area-section-end -->
 
 
 
@@ -382,7 +377,6 @@
     </section>
 
     <!-- copyright-section-end -->
-
 </body>
 
 </html>
