--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
               <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">PROJECT</a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="#">Project Archived</a>
+                  <a class="dropdown-item" href="./project archived.html">Project Archived</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">Current Project </a>
+                  <a class="dropdown-item" href="./current projects.html">Current Project </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">Sisuation Report</a>
+                  <a class="dropdown-item" href="./situation report.html">Sisuation Report</a>
                 </li>
               </ul>
             </li>
