--- a/project archived.html
+++ b/project archived.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WORKING AREA</title>
-
+    <title>Project Archived</title>
     <!-- css-link-start -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- css-link-end -->
@@ -148,47 +147,99 @@
         </nav>
     </section>
     <!-- nav-section-end -->
-    <!-- working-area-hero-section-start -->
-    <section id="working-area-hero">
-        <div class="working-hero">
-            <h1>WORKING <span style="color: red;"> AREA</span></h1>
-        </div>
-    </section>
-    <!-- working-area-hero-section-end  -->
-    <!-- working-area-section-start  -->
-    <section id="nav-working-area">
-        <div class="container">
-            <div class="nav-working">
-                <div class="nav-working-header">
-                    <h1>WORKING AREA</h1>
-                    <p>Community Initiative Society (CIS) has expanded its working area to 37 districts in
-                        Bangladesh,
-                        covering 60 percent of the demographic landscape including the climate vulnerable coastal
-                        communities and the underprivileged population.</p>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="nav-working-map mt-5">
-                            <img src="./assets/img/CIS-All-District-Working-Area-map-update.png" alt="">
+
+
+    <!-- project-archived-for-section-start -->
+    <section id="nav-project-archived">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-8">
+                    <div class="project-archived">
+                        <div class="project-archived-header">
+                            <h3>Project Archived</h3>
                         </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="nav-working-text mt-5">
-                            <p>
-                                The districts are Dhaka including Dhaka city, Munshiganj, Pabna, Sirajganj, Rajshahi
-                                Gaibandha, Jossore, Bogra, Narayanganj, Mymensingn, Netrokona, Sunamganj, Kurigram,
-                                Satkhira, Chandpur, Barishal, Dinajpur, Madaripur (Kalkini), Chattogram, Habiganj,
-                                sylhet, Comilla, Rajshahi, Faridpur, Rangpur, Jossore, Kisorganj, Manikganj, Satkhira,
-                                Noakhali, Feni, Cox’s bazar, Jamalpur, Bagerhat, Khulna, Kustia & Patuakhali.</p>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="cleft-lip-img">
+                                    <img src="./assets/img/project img/clip1-qdr7k3r24d2umg1qqkxdulwnte12y2lpkqjsvzbnio.png"
+                                        alt="">
+                                </div>
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="cleft-lip-text">
+                                    <h4><a href="#">CLEFT-LIP & PALATE PROGRAM</a></h4>
+                                    <p>In Bangladesh, more than 250,000 cleft lip patients are left without any form
+                                        of
+                                        treatment whatsoever. Poverty makes it impossible for most of the cleft
+                                        patients
+                                        to get any surgical help. Their deformed facial structure keeps them from
+                                        attending schools or finding a job. These patients are unfortunately, always
+                                        neglected; especially girls.</p>
+                                    <div class="see-more mt-5">
+                                        <a href="#">See More</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+
+
+
+                        <div class="row mt-3">
+                            <div class="col-sm-4 ">
+                                <div class="research-program-img">
+                                    <img src="./assets/img/project img/photo-1458040937381-49c067dfd49a-qdr7k3r24d2umg1qqkxdulwnte12y2lpkqjsvzbnio.jpg"
+                                        alt="">
+                                </div>
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="research-program-text">
+                                    <h4><a href="#">RESEARCH PROGRAM WITH HARVARD</a></h4>
+                                    <p>Research Programme DCH Trust is doing various research activities on Health,
+                                        Arsenic and Occupational Health Safety in collaboration with local and
+                                        international organizations or institutions like Harvard School of Public
+                                        Health, HarvardUniversity, Oregon State University-USA, Boston Children Hospital
+                                        -USA, South Australia University, Jadovpur University-India, Universiti Sains
+                                        Malaysia.</p>
+                                    <div class="see-more mt-5">
+                                        <a href="#">See More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                        <div class="row mt-3">
+                            <div class="col-sm-4">
+                                <div class="arsenic-patient-img">
+                                    <img src="./assets/img/project img/as-pat07-4-qdr7k4owb744y20dl3c0f3o4erwg5rpfwv7ad9a9cg.jpg"
+                                        alt="">
+                                </div>
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="arsenic-patient-text">
+                                    <h4><a href="#">ARSENIC PATIENT MANAGEMENT PROGRAM</a></h4>
+                                    <p>DCH has established an Arsenic Treatment Unit in Dhaka, where the arsenic
+                                        patients receive health support at free of cost. These include treatment, food,
+                                        medicine, investigation and surgical interventions too. Now 300 serious patients
+                                        are getting hospital treatments regularly. In addition, 16000 arsenic patients
+                                        are getting support from the hospital OPD. To provide health support to the
+                                        arsenic patients DCH has implemented the following programmes.</p>
+                                    <div class="see-more mt-5">
+                                        <a href="#">See More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
+                <div class="col-sm-3"></div>
             </div>
         </div>
     </section>
-    <!-- working-area-section-end -->
-
-
+    <!-- project-archived-for-section-end -->
 
 
 
