--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">MEDIA CENTER</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Prees Realesh</a></li>
-                <li><a class="dropdown-item" href="#">News Letters </a></li>
+                <li><a class="dropdown-item" href="./press release.html">Prees Realesh</a></li>
+                <li><a class="dropdown-item" href="./news letters.html">News Letters </a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Leaflet-Brochure</a>
+                  <a class="dropdown-item" href="./leaflet brochure.html">Leaflet-Brochure</a>
                 </li>
-                <li><a class="dropdown-item" href="#">Stories</a></li>
-                <li><a class="dropdown-item" href="#">Publication </a></li>
+                <li><a class="dropdown-item" href="./stories.html">Stories</a></li>
+                <li><a class="dropdown-item" href="./publication.html">Publication </a></li>
                 <li><a class="dropdown-item" href="#">Media Coverage</a></li>
-                <li><a class="dropdown-item" href="#">Photo Gallery</a></li>
+                <li><a class="dropdown-item" href="./photo gallery.html">Photo Gallery</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
