--- a/index.html
+++ b/index.html
@@ -146,17 +146,20 @@
   </section>
   <!-- nav-section-end -->
   <!-- hero section start -->
-  <section id="hero"></section>
+  <section id="hero">
   <div id="demo" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./assets/img/hero-img/chicago.jpg" alt="Los Angeles" class="d-block" style="width: 100%" />
+        <img src="./assets/img/hero-img/001.jpg" alt="Los Angeles" class="d-block" style="width: 100%;" />
       </div>
       <div class="carousel-item">
-        <img src="./assets/img/hero-img/la (1).jpg" alt="Chicago" class="d-block" style="width: 100%" />
+        <img src="./assets/img/hero-img/IMG20220630111229-1-scaled.jpg" alt="Chicago" class="d-block" style="width: 100%" />
       </div>
       <div class="carousel-item">
-        <img src="./assets/img/hero-img/ny.jpg " alt="New York" class="d-block" style="width: 100%" />
+        <img src="./assets/img/hero-img/Slider-cis-2-01-scaled.jpg " alt="New York" class="d-block" style="width: 100%" />
+      </div>
+      <div class="carousel-item">
+        <img src="./assets/img/hero-img/Slider-cis-4-01-scaled.jpg " alt="New York" class="d-block" style="width: 100%" />
       </div>
     </div>
 
@@ -167,6 +170,7 @@
       <span class="carousel-control-next-icon"></span>
     </button>
   </div>
+</section>
   <!-- hero section end -->
 
   <!-- about-section- start -->
