--- a/press release.html
+++ b/press release.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Press Release</title>
     <!-- css-link-start -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- css-link-end -->
@@ -147,7 +147,99 @@
         </nav>
     </section>
     <!-- nav-section-end -->
+    <!-- press-release-section-start -->
+    <section id="nav-press-release">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-8">
+                    <div class="press-release">
+                        <div class="press-release-header">
+                            <h3>Press Release</h3>
+                        </div>
+                        <div class="press-release-notice">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="press-release-notice-content">
+                                        <img src="./assets/img/Press Release/1st-Final-Press-release-English-1_page-0001-791x1024.jpg"
+                                            alt="">
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="press-release-notice-content">
+                                        <img src="./assets/img/Press Release/2nd-Final-Press-release-English-2_page-0001-791x1024.jpg"
+                                            alt="">
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="press-release-notice-content">
+                                        <img src="./assets/img/Press Release/3rd-Final-Press-release-Bangla-1-1_page-0001-791x1024.jpg"
+                                            alt="">
+                                    </div>
+                                </div>
 
+
+                                <div class="col-sm-6">
+                                    <div class="press-release-notice-content">
+                                        <img src="./assets/img/Press Release/4th-Final-Press-release-Bangla-1-2_page-0001-791x1024.jpg"
+                                            alt="">
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <div class="press-release-notice-content">
+                                        <img src="./assets/img/Press Release/6th-Press-Release-Rangpur-training-program-for-NPF-889x1024.jpg"
+                                            alt="">
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="press-release-notice-content">
+                                        <img src="./assets/img/Press Release/7th-Press-Release-Habigonj-training-program-for-NPF-819x1024.jpg"
+                                            alt="">
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <div class="press-release-notice-content">
+                                        <img src="./assets/img/Press Release/8thPress-Release-Golachipa-training-program-1-813x1024.jpg"
+                                            alt="">
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="press-release-notice-content">
+                                        <img src="./assets/img/Press Release/9thPress-Release-Golachipa-training-program-2-1024x637.jpg"
+                                            alt="">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <div class="press-release-notice-marcy">
+                                        <img src="./assets/img/Press Release/Mercy-LOGO-1-300x75.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="press-release-notice-dcht">
+                                        <img src="./assets/img/Press Release/DCHT-clean-logo-1-qdr7k3qzonijv12k8tvi5k1y4k20wg5gemvam4w6i0.png"
+                                            alt="">
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="press-release-notice-cis">
+                                        <img src="./assets/img/Press Release/01-CIS-Logo-1-qdr7k4otvhju6n173ca4q1tepxxe4596qris3eusbs.jpg"
+                                            alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3"></div>
+            </div>
+        </div>
+    </section>
+    <!-- press-release-section-end -->
 
 
 
