--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">MEDIA CENTER</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="./press release.html">Prees Realesh</a></li>
+                <li><a class="dropdown-item" href="./press release.html">Prees Release</a></li>
                 <li><a class="dropdown-item" href="./news letters.html">News Letters </a></li>
                 <li>
                   <a class="dropdown-item" href="./leaflet brochure.html">Leaflet-Brochure</a>
@@ -147,30 +147,33 @@
   <!-- nav-section-end -->
   <!-- hero section start -->
   <section id="hero">
-  <div id="demo" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./assets/img/hero-img/001.jpg" alt="Los Angeles" class="d-block" style="width: 100%;" />
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./assets/img/hero-img/001.jpg" alt="Los Angeles" class="d-block" style="width: 100%;" />
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/img/hero-img/IMG20220630111229-1-scaled.jpg" alt="Chicago" class="d-block"
+            style="width: 100%" />
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/img/hero-img/Slider-cis-2-01-scaled.jpg " alt="New York" class="d-block"
+            style="width: 100%" />
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/img/hero-img/Slider-cis-4-01-scaled.jpg " alt="New York" class="d-block"
+            style="width: 100%" />
+        </div>
       </div>
-      <div class="carousel-item">
-        <img src="./assets/img/hero-img/IMG20220630111229-1-scaled.jpg" alt="Chicago" class="d-block" style="width: 100%" />
-      </div>
-      <div class="carousel-item">
-        <img src="./assets/img/hero-img/Slider-cis-2-01-scaled.jpg " alt="New York" class="d-block" style="width: 100%" />
-      </div>
-      <div class="carousel-item">
-        <img src="./assets/img/hero-img/Slider-cis-4-01-scaled.jpg " alt="New York" class="d-block" style="width: 100%" />
-      </div>
-    </div>
 
-    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
-  </div>
-</section>
+      <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+  </section>
   <!-- hero section end -->
 
   <!-- about-section- start -->
